--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
 Flask==0.10.1
 SQLAlchemy==1.0.12
+Graphene-sqlalchemy==2.1.0
+Graphene==2.1.5
+Flask-Limiter==1.0.1
+flask-caching==1.7.2
+alembic==0.8.6
 contexter==0.1.4
 flasgger==0.9.3
 flask-caching==1.7.2
@@ -22,3 +27,13 @@ pycrypto==2.6.1
 scipy==1.2.3
 Werkzeug==0.11.9
 unidecode==1.0.23
+itsdangerous==0.24
+MarkupSafe==0.23
+mimerender==0.6.0
+python-dateutil==2.5.3
+python-mimeparse==1.5.2
+six==1.10.0
+aniso8601==3.0.0
+pbr==3.1.1
+psycopg2==2.7.7
+psycopg2-binary==2.8.2
