Add docstrings and swagger documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,34 @@
 Flask-Cache==0.13.1
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
+Flask-Cors==3.0.2
+Flask-HTTPAuth==3.1.2
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Restless==0.17.0
-Graphene-sqlalchemy==2.1.0
-Graphene==2.1.5
-contexter==0.1.4
-alembic==1.7.5
-flask-caching==1.10.1
-gunicorn==20.1.0
+Flask-SQLAlchemy==2.1
+Flask-Script==2.0.5
 Flask==0.10.1
-itsdangerous==0.24
-jsonschema==3.2.0
-marshmallow==2.9.1
+psycopg2==2.9.9
+SQLAlchemy==1.0.12
+Graphene-sqlalchemy==2.1.0
+graphene==3.3
+Flask-Limiter==1.0.1
+flask-caching==1.7.2
+alembic==0.8.6
+contexter==0.1.4
+jsonschema==2.5.1
 marshmallow-sqlalchemy==0.9.0
-python-jose==3.3.0
-pycrypto==2.6.1
-Werkzeug==0.11.9
-flasgger
+marshmallow==2.9.1
 mock==2.0.0
 nose==1.3.7
-numpy==1.11.0
 postgres==2.2.1
-psycopg2==2.9.1
-psycopg2-binary==2.8.2
+Werkzeug==0.11.9
+unidecode==1.0.23
+itsdangerous==0.24
+MarkupSafe==0.23
+mimerender==0.6.0
+python-dateutil==2.5.3
+python-mimeparse==1.5.2
+six==1.10.0
+pbr==3.1.1
+aniso8601==9.0.1
+numpy==1.16.6
