--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,63 @@
+alembic==1.6.5
+aniso8601==3.0.0
+attrs==21.4.0
+configparser==4.0.2
+contexter==0.1.4
+contextlib2==0.6.0.post1
+flasgger==0.9.3
+Flask==0.10.1
 Flask-Cache==0.13.1
+Flask-Caching==1.9.0
 Flask-Cors==3.0.2
 Flask-HTTPAuth==3.1.2
+Flask-Limiter==1.0.1
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Restless==0.17.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.1
-Flask-Script==2.0.5
-Flask==0.10.1
-psycopg2==2.9.9
-SQLAlchemy==1.0.12
-Graphene-sqlalchemy==2.1.0
-graphene==3.3
-Flask-Limiter==1.0.1
-flask-caching==1.7.2
-alembic==0.8.6
-contexter==0.1.4
-jsonschema==2.5.1
-marshmallow-sqlalchemy==0.9.0
+funcsigs==1.0.2
+functools32==3.2.3.post2
+graphene==2.1.5
+graphene-sqlalchemy==2.1.0
+graphql-core==2.3.2
+graphql-relay==0.5.0
+gunicorn==19.10.0
+importlib-metadata==2.1.3
+itsdangerous==0.24
+Jinja2==2.11.3
+jsonschema==3.2.0
+limits==1.6
+Mako==1.1.6
+MarkupSafe==0.23
 marshmallow==2.9.1
+marshmallow-sqlalchemy==0.9.0
+mimerender==0.6.0
+mistune==2.0.5
 mock==2.0.0
 nose==1.3.7
-postgres==2.2.1
-Werkzeug==0.11.9
-unidecode==1.0.23
-itsdangerous==0.24
-MarkupSafe==0.23
-mimerender==0.6.0
-python-dateutil==2.5.3
-python-mimeparse==1.5.2
-six==1.10.0
-pbr==3.1.1
-aniso8601==9.0.1
 numpy==1.16.6
+pathlib2==2.3.7.post1
+pbr==3.1.1
+postgres==2.2.1
+promise==2.3
+psycopg2==2.7.7
+psycopg2-binary==2.8.2
+pycrypto==2.6.1
+pypi==2.1
+pyrsistent==0.16.1
+python-dateutil==2.5.3
+python-editor==1.0.4
+python-mimeparse==1.5.2
+pytz==2023.3.post1
+PyYAML==5.4.1
+Rx==1.6.3
+scandir==1.10.0
+scipy==1.2.3
+singledispatch==3.7.0
+six==1.16.0
+SQLAlchemy==1.4.50
+typing==3.10.0.0
+Unidecode==1.0.23
+Werkzeug==0.11.9
+zipp==1.2.0
